--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       <div class="button-container">
         <a href="" class="button">arXiv</a>
         <!-- <a href="" class="button">Video</a> -->
-        <a href="" class="button">Code (Coming soon)</a>
-        <a href="" class="button">Data (Coming soon)</a>
+        <a href="https://github.com/Dou-Yiming/TaRF" class="button">Code</a>
+        <a href="https://github.com/Dou-Yiming/TaRF" class="button">Data</a>
       </div>
     </div>
   </div>
