--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <p>
       This project is highly related to the previous work
       <a href="https://proceedings.mlr.press/v205/zhong23a.html"><i>Touching a NeRF</i></a>,
-      which also estimates touch from NeRF representation using robot-collected data.
+      which also estimates touch from NeRF representation using object-centric data collected from robots.
     </p>
 
 
