--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="last-affiliation-item">CVPR 2024</div>
       </div>
       <div class="button-container">
-        <a href="" class="button">arXiv</a>
+        <a href="https://arxiv.org/abs/2405.04534" class="button">arXiv</a>
         <!-- <a href="" class="button">Video</a> -->
         <a href="https://github.com/Dou-Yiming/TaRF" class="button">Code</a>
         <a href="https://github.com/Dou-Yiming/TaRF" class="button">Data</a>
