--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       manually annotate the correspondences between the touch measurement and synthesized frame.
     </p>
     <div class="barplot">
-      <img src="assets/figs/setup.jpg" width="40%">
+      <img src="assets/figs/setup.jpg">
     </div>
     <p>
       The calibration procedure of estimating the 6DoF relative pose
@@ -175,7 +175,7 @@
       We call the resulting scene representation a tactile-augmented radiance field (TaRF).
     </p>
     <div class="barplot">
-      <img src="assets/figs/dataset_comp.jpg" width="30%">
+      <img src="assets/figs/dataset_comp.jpg">
     </div>
 
 
@@ -189,7 +189,7 @@
       obtained by probing, to other visually/structurally similar regions of the scene.
     </p>
     <div class="barplot">
-      <img src="assets/figs/method.jpg" width="35%">
+      <img src="assets/figs/method.jpg">
     </div>
 
     <h2>Dense Touch Estimation</h2>
@@ -216,8 +216,6 @@
     <div class="barplot">
       <div class="image_container">
         <img src="assets/figs/heatmap.jpg">
-        <div class="caption" style="margin-top: 0.0vw">
-        </div>
       </div>
     </div>
 
@@ -234,7 +232,7 @@
       but also the diffusion model captures distinguishable and useful patterns.
     </p>
     <div class="barplot">
-      <img src="assets/figs/classification_results.jpg" width="40%">
+      <img src="assets/figs/classification_results.jpg">
     </div>
 
     <h2>Related Works</h2>
