--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div id="video_grid">
     <div class="video_wrapper">
       <div class="video_container">
-        <video autoplay muted playsinline loop>
+        <video autoplay muted playsinline loop preload="metadata">
           <source src="assets/grid/table_outdoor.mp4" type="video/mp4">
         </video>
         <div class="overlay">Table</div>
@@ -75,7 +75,7 @@
     </div>
     <div class="video_wrapper">
       <div class="video_container">
-        <video autoplay muted playsinline loop>
+        <video autoplay muted playsinline loop preload="metadata">
           <source src="assets/grid/lounge.mp4" type="video/mp4">
         </video>
         <div class="overlay">Lounge</div>
@@ -245,7 +245,21 @@
 
     <h3>BibTeX</h3>
     <p class="bibtex">
-
+      <!-- @misc{dou2024tactileaugmented,
+      <br>
+      &nbsp;&nbsp;title={Tactile-Augmented Radiance Fields}, 
+      <br>
+      &nbsp;&nbsp;author={Yiming Dou and Fengyu Yang and Yi Liu and Antonio Loquercio and Andrew Owens},
+      <br>
+      &nbsp;&nbsp;year={2024},
+      <br>
+      &nbsp;&nbsp;eprint={2405.04534},
+      <br>
+      &nbsp;&nbsp;archivePrefix={arXiv},
+      <br>
+      &nbsp;&nbsp;primaryClass={cs.CV}
+      <br>
+    } -->
     </p>
   </div>
   <script type="text/javascript">
