--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 </head>
 
 <body>
+  <div id="video_grid_mobile">
+    <div class="video_wrapper">
+      <div class="video_container">
+        <video autoplay muted playsinline loop preload="auto">
+          <source src="assets/grid/lounge.mp4" type="video/mp4">
+        </video>
+      </div>
+    </div>
+  </div>
+
   <div id="video_grid">
     <div class="video_wrapper">
       <div class="video_container">
@@ -67,7 +77,7 @@
   <div id="video_grid">
     <div class="video_wrapper">
       <div class="video_container">
-        <video autoplay muted playsinline loop preload="metadata">
+        <video autoplay muted playsinline loop preload="auto">
           <source src="assets/grid/table_outdoor.mp4" type="video/mp4">
         </video>
         <div class="overlay">Table</div>
@@ -75,13 +85,17 @@
     </div>
     <div class="video_wrapper">
       <div class="video_container">
-        <video autoplay muted playsinline loop preload="metadata">
+        <video autoplay muted playsinline loop preload="auto">
           <source src="assets/grid/lounge.mp4" type="video/mp4">
         </video>
         <div class="overlay">Lounge</div>
       </div>
     </div>
   </div>
+
+  
+
+  
 
   <div id="title_slide">
     <div class="title_middle">
