--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
     <div class="barplot">
       <video src="assets/figs/capture.mp4" width="25%" autoplay muted playsinline loop></video>
     </div>
+    <div id="video_grid_mobile">
+      <video src="assets/figs/capture.mp4" width="45%" autoplay muted playsinline loop></video>
+    </div>
     <p>
       We then estimate the camera location of the vision frames collected in the previous two stages using SfM.
       After estimating the camera poses for the vision frames,
@@ -214,6 +217,11 @@
     <div class="barplot">
       <video src="assets/grid/table_indoor.mp4" width="22%" autoplay muted playsinline loop></video>
       <video src="assets/grid/table_outdoor.mp4" width="22%" autoplay muted playsinline loop></video>
+    </div>
+
+    <div id="video_grid_mobile">
+      <video src="assets/grid/table_indoor.mp4" width="45%" autoplay muted playsinline loop></video>
+      <video src="assets/grid/table_outdoor.mp4" width="45%" autoplay muted playsinline loop></video>
     </div>
 
     <h1>Downtream Tasks</h1>
