--- a/index.html
+++ b/index.html
@@ -267,21 +267,17 @@
 
     <h3>BibTeX</h3>
     <p class="bibtex">
-      <!-- @misc{dou2024tactileaugmented,
+      @article{dou2024tactile,
       <br>
-      &nbsp;&nbsp;title={Tactile-Augmented Radiance Fields}, 
+      &nbsp;&nbsp;title={Tactile-Augmented Radiance Fields},
       <br>
-      &nbsp;&nbsp;author={Yiming Dou and Fengyu Yang and Yi Liu and Antonio Loquercio and Andrew Owens},
+      &nbsp;&nbsp;author={Dou, Yiming and Yang, Fengyu and Liu, Yi and Loquercio, Antonio and Owens, Andrew},
       <br>
-      &nbsp;&nbsp;year={2024},
+      &nbsp;&nbsp;journal={arXiv preprint arXiv:2405.04534},
       <br>
-      &nbsp;&nbsp;eprint={2405.04534},
+      &nbsp;&nbsp;year={2024}
       <br>
-      &nbsp;&nbsp;archivePrefix={arXiv},
-      <br>
-      &nbsp;&nbsp;primaryClass={cs.CV}
-      <br>
-    } -->
+    }
     </p>
   </div>
   <script type="text/javascript">
